--- a/app/src/main/res/layout/activity_game_score.xml
+++ b/app/src/main/res/layout/activity_game_score.xml
@@ -1,31 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scoreContainer"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.GameScoreActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
-        android:id="@+id/score1"
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="viewModel"
+            type="com.ericpodolsky.tennisscore.viewmodels.GameViewModel" />
+    </data>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/scoreContainer"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@android:color/holo_blue_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHeight_percent=".5">
-        <include
-            layout="@layout/individual_score"/>
-    </FrameLayout>
-    <FrameLayout
-        android:id="@+id/score2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@android:color/holo_red_dark"
-        app:layout_constraintHeight_percent=".5"
-        app:layout_constraintTop_toBottomOf="@id/score1">
-        <include
-            layout="@layout/individual_score"/>
-    </FrameLayout>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent"
+        tools:context=".activities.GameScoreActivity">
+
+        <include android:id="@+id/match_stats"
+                 layout="@layout/match_stats_panel"
+                 android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 app:viewModel="@{viewModel}"
+                 app:layout_constraintHeight_percent=".1"
+                 app:layout_constraintTop_toTopOf="parent" />
+
+        <include android:id="@+id/score_panel1"
+                 layout="@layout/player1_score_panel"
+                 android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 app:viewModel="@{viewModel}"
+                 app:layout_constraintHeight_percent=".45"
+                 app:layout_constraintTop_toBottomOf="@id/match_stats" />
+
+        <include android:id="@+id/score_panel2"
+                 layout="@layout/player2_score_panel"
+                 android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 app:viewModel="@{viewModel}"
+                 app:layout_constraintHeight_percent=".45"
+                 app:layout_constraintTop_toBottomOf="@id/score_panel1" />
+    </android.support.constraint.ConstraintLayout>
+</layout>
