--- a/app/src/main/res/layout/match_stats_panel.xml
+++ b/app/src/main/res/layout/match_stats_panel.xml
@@ -12,8 +12,7 @@
     <FrameLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="#444444"
-        android:onClick="@{() -> viewModel.incrementPlayer1Score()}">
+        android:background="#444444">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
